Fix home on small screens

--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -112,12 +112,13 @@
   .caixa-responsiva {
     padding-top: 4rem !important;
     padding-bottom: 4rem !important;
-    width: 100%;
-    margin-left: 0 !important;
+    /* width: 100%; */
+    /* margin-left: 0 !important; */
   }
   .text-area {
-    margin-right: 0 !important;
+    margin-left: 0 !important;
     gap: 1.6rem !important;
+    width: 100%;
   }
   .title {
     font-size: 1.875rem !important;
@@ -133,16 +134,16 @@
     margin-bottom: 0 !important;
   }
   .rounded-container {
-    margin-left: 0.07rem;
-    margin-right: 0.07rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    /* margin-left: 0.1rem;
+    margin-right: 0rem;
+    width: 97vw; */
   }
   .home-image-container {
-    margin-left: 0 !important;
+    margin-right: 0 !important;
   }
   .home-image {
     padding-bottom: 1.85rem !important;
-  }
-  .text-area {
-    width: 100%;
   }
 }
